--- a/desafioDomEventosGrondonaFacundo/css/style.css
+++ b/desafioDomEventosGrondonaFacundo/css/style.css
@@ -6,9 +6,11 @@
 
   .bodyGeneral {
     background-color: rgb(129, 126, 126);
+    image-rendering: auto;
+    /*background-image: url("../img/curved6.jpg");*/
     font-family: 'Poppins', sans-serif;
-    -webkit-text-decoration-color: #2f2546;
-            text-decoration-color: #2f2546;
+    -webkit-text-decoration-color: #fefeff;
+            text-decoration-color: #fcfcfe;
     padding: 60px 10px 0px;
     /* Medida movil */
     /* padding: 90px 20px 0px; /* Medida pantalla */
@@ -20,21 +22,26 @@
   }
 
   header {
-    height: 65px;
+    height: 75px;
     position: fixed;
     width: 100%;
     top: 0;
     left: 0;
     z-index: 100;
-    background-color: #4b98f5;
+    background-color: #084ea5;
   }
   .centro{
+      display: flex;
       text-align: center;
+      align-content: center;
+      justify-content: center;
+      align-items: center;
+      justify-items: center;
   }
 
   .container{
-    margin-top: 70px;
-    background-color: aliceblue;
+    margin-top: 60px;
+    background-color: rgb(229, 237, 244);
 
   }
 
@@ -42,7 +49,7 @@
       border: solid;
       border-radius: 5px;
       border-color: rgb(3, 99, 99);
-      background-color: #4bf5dc;
+      background-image: url("../img/curved6.jpg");
       
     
     
@@ -50,4 +57,14 @@
 
   .margen{
       margin: 10px;
+  }
+
+  .inst{
+    border: solid;
+    border-radius: 5px;
+    border-color: rgb(3, 99, 99);
+    background-image: url("../img/curved6.jpg");
+    max-width: fit-content;
+   
+    
   }
